# f1_pitwall_analytics

./: .gitignore  README.md  pyproject.toml
analysis/: plot_pole_positions.py  plot_race_results.py
app/: streamlit_app.py
etl/: fetch_f1_data.py
