[project]
name = "f1_pitwall_analytics"
version = "0.1.0"
description = "An F1 analytics ETL pipeline with Streamlit using the Ergast API"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "requests",
    "streamlit",
    "matplotlib"
]
